<resources>
    <string name="app_name">MCKVIE</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string-array name="Department">
        <item>CSE</item>
        <item>ME</item>
        <item>IT</item>
        <item>ECE</item>
        <item>EE</item>
        <item>AUE</item>
    </string-array>

    <string-array name="year">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="ct">
        <item>CA 1</item>
        <item>CA 2</item>
        <item>CA 3</item>
        <item>CA 4</item>
    </string-array>

    <string-array name="Courses">
        <item>BTECH</item>
        <item>MTECH</item>
        <item>MCA</item>
    </string-array>

    <string-array name="Sem">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
        <item>Eighth</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="input_error_name">Name required</string>
    <string name="input_error_email">Email required</string>
    <string name="input_error_password">Password required</string>
    <string name="input_error_phone">Unique ID Required</string>
    <string name="title_error">Title is Required</string>
    <string name="input_error_password_length">Password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">Enter a valid Unique ID</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">Enter a valid email</string>
    <string name="Phone1">Contact Number: <font fgcolor='#0000cd'>+919007017339</font></string>
    <string name="Phone2">Phone: <font fgcolor='#0000cd'>+91 332654 9318</font></string>
    <string name="Phone3">Fax: <font fgcolor='#0000cd'>+91 332654 9318</font></string>

    <string name="anti_ragging">As per directive of the AICTE under National Ragging Prevention Project, all the aspirant candidates along with their parents/guardians are advised to go to the website  www.antiragging.in  or  www.amanmovement.org , fill up and submit the Affidavits online and take a printout of the submitted Affidavits (both student and parent) and submit the same to the Institute Officials while taking their admission in MCKVIE during the admission process. </string>
    <string name="anti_ragging1">Ragging is neither a ritual nor a custom in campus life. It is a punishable criminal offence. MCKVIE strongly discourages ragging and stringent action is taken against offenders. New students are welcome to join MCKVIE without any fear or apprehension.</string>
    <string name="anti_ragging2">According to The West Bengal Prohibition of Ragging in Educational Institutions Act 2000 “Ragging” means the doing of any act which causes, or is likely to cause, any physical, psychological or physiological harm or apprehension or shame or embarrassment to a student, and includes –\n\t\t\t\u2022teasing or abusing of, playing practical joke on, or causing hurt to, any student, or\n\t\t\t\u2022
asking any student to do any act, or perform anything, which he would not, in the ordinary course, be willing to do or perform;
and “student” means a student who has been prosecuting his studies in an educational institution. </string>
    <string name="antiragging">Explanation: For the purposes of this section, educational institution shall include– the premises or the campus of the educational institution, or the hall, that is to say, the unit of residence of students maintained by the educational institution, if any, or
the hostel, that is to say, the unit of residence for students, if any , not maintained by the educational institution but recognized under any law for the time being in force.\n
\t\t\t\u2022Teasing or abusing of, playing practical joke on, or causing hurt to, any student, or\n \t\t\t\u2022Asking any student to do any act, or perform anything, which he would not, in the ordinary course, be willing to do or perform;\n
and “student” means a student who has been prosecuting his studies in an educational institution.</string>
    <string name="anti_ragging3"> Whoever contravenes the provisions of section 3 shall be punished with imprisonment of either description for a term which may extend to two years, or with fine which may extend to five thousand rupees, or with both.</string>
    <string name="anti_ragging4">If any student is convicted of an offence punishable under section 4, he shall be dismissed from the educational institution in which he has been prosecuting his studies for the time being, and shall not be re-admitted to that educational institution.</string>
    <string name="anti_ragging5">Without prejudice to the foregoing provisions of this Act, where a student complains of ragging by any other student to the head of the educational institution or to any other person responsible for the management of the educational institution, such head of the educational institution or person responsible for the management of the educational institution shall forthwith inquire into the complaint and if, on such enquiry, the complaint is found to be true, he shall expel the student, who has committed the offence, from the educational institution.</string>
    <string name="anti_ragging6">The Supreme Court Verdict against ragging\n\t\t\t\u2022Ragging in any form is a criminal offence and hence the ragging offenders to be treated by Police and the Court of Law, on a par with any other criminal under Indian Penal Code.
\n\t\t\t\u2022Once, after probe, the accused is charge sheeted by the police, courts will fast track the ragging cases.
\n\t\t\t\u2022Consequently, ragging offenders to be given stern and exemplary punishment. One such punishment will be summary expulsion from the institute and forfeiture of future claim for admission elsewhere</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admission_1">Students of MCKVIE learn from dedicated and highly qualified faculty who encourage critical thinking and creativity. Application oriented teaching and hands on training transforms them into dynamic leaders and accomplished professionals.</string>
    <string name="admission_2">Grab a copy of the latest Information Brochure by clicking on the link below.</string>
    <string name="admission_3">If you have received a token number from the college, you can fill you admission form online from the convenience of your home.</string>
    <string name="admission_4">As per directive of the AICTE under National Ragging Prevention Project, all the aspirant candidates along with their parents/guardians are advised to go to the website www.antiragging.in or www.amanmovement.org, fill up and submit the Affidavits online and take a printout of the submitted Affidavits (both student and parent) and submit the same to the institute Officials while taking their admission in MCKVIE.</string>
    <string name="admission_5">For admission of students in Engineering and Technology courses in any Engineering and Technological Degree College of West Bengal a single window selection procedure is followed. Students need to sit for any of the following Admission Tests:</string>
    <string name="admission_6">A minimum 10+2 examination passed candidate having minimum aggregate marks as stipulated from time to time by the respective Test Agencies has to qualify in the JEM or JEE-MAIN and thereby obtain a rank for admission into the 4-year Degree Level Engineering and Technology courses. After that in the duly notified online counselling sessions, the Remote Control Centre (RC – Centre) of the WBJEE Board allocates colleges and streams to respective candidates depending upon their rank in the above Tests and the availability of seats in the streams opted for by the candidates. As followed in West Bengal, 80% seats of the approved intake in a college are allocated to the JEM qualified candidates while 10% seats of such intake are allocated to the AIEEE qualified candidates. The rest 10% seats are allowed by the Government to colleges as Management Quota.</string>
    <string name="admission_7">Candidates with Engineering Diploma from an AICTE approved Institution with at least 45% marks (40% in case of candidates belong to Reserved Category) and B.Sc Degree holders with Mathematics as one of the subjects in the Graduation Level need to qualify in the JELET and obtain ranks for direct admission to 2nd year (3rd Semester) of the 4-year Degree Level Engineering and Technology Courses following the same procedure of Counselling Sessions of the Remote Control Centre (RC – Centre) as mentioned above. The quota here is 20% of the approved intake in a subject of the respective Colleges.</string>
    <string name="admission_8">For admission into the 3-year MCA Course a minimum graduation degree holder in any stream of 10+2+3 pattern with Mathematics as one of the subjects at the Degree Level or a BCA/B.TECH Degree holder has to qualify in the Joint Entrance Examination for Computer Application called in short JECA conducted by West Bengal Joint Entrance Examination Board and thereby obtain a rank for admission into the course. After that in the duly notified counselling sessions, WBJEE Board allocates colleges to the respective candidates depending upon their rank in the JECA and the availability of seats in the Institute.</string>
    <string name="admission_9">For detailed procedure of admission to the M. Tech course please visit MAKAUT website.</string>

    <string name="placement1">The Training and Placement Cell at MCKVIE actively works towards helping the students in their Training and Placements. Our Placement Wing, the Training and Placement Cell, actively connects prospective recruiters and arrange recruitment drive in accordance with the market trend of entry level recruitment scope in the country. Students from our institute, over the past many years, have been absorbed by reputed organizations from all parts of the country. The Training and Placement Cell, administered by a team of dedicated personnel works round the year to establish contacts with the companies to create such opportunities for eligible students.</string>
    <string name="placement2">The Training and Placement Cell aims at imparting holistic training to the students to enhance their employability. These include :</string>
    <string name="placement3"></string>
    <string name="placement4"></string>
    <string name="placement5"></string>
    <string name="placement6"></string>

</resources>
